--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-  <title>From me, ig: @qihf4 <3</title>
+  <title>From me, ig: @qihf4✨ <3</title>
   <link rel="icon" type="image/svg+xml" href="https://feeldreams.github.io/main-icon.png">
   <meta name="description" content="Buka bentar yaa..">
   <meta name="keywords" content="From me, ig: @qihf4">
@@ -55,7 +55,7 @@
         <div id="stiker1" class="scale0 stiker">
           <img src="https://feeldreams.github.io/pusn.gif" />
         </div>
-        <h1 id="teks1" class="scale0 itim" style="font-size: 22px;">Kamu Apa? ðŸ«£<br><br>>>></h1>
+        <h1 id="teks1" class="scale0 itim" style="font-size: 22px;">Kamu Apa? 🤔<br><br>>>></h1>
       </div>
 
       <div class="swiper-slide">
@@ -63,7 +63,7 @@
           <img src="https://feeldreams.github.io/g5.gif" />
         </div>
         <div id="scroll-container" class="blocktext">
-          <p id="teks2" class="itim" style="font-size:17px;margin-left:40px"><b class="gariskuning">kamu itu sangat istimewa,</b></span> aku bahkan tidak bisa menjelaskan<br>betapa hebatnya kamu dalam hidup,<br>kamu benar-benar luar biasa<br>karena gada yang bisa sekuat<br>dan sehebat kamu, diluar sana<br>aku yakin ga semua orang bisa jadi kamu,<br>sehat-sehat trus orang hebat ðŸ«£ðŸ˜ðŸ˜‹ðŸ¤<br><br><b class="putih merah">Wish you all the best  >></b><br><br><br>Edited by me, ig: @qihf4</b></p>
+          <p id="teks2" class="itim" style="font-size:17px;margin-left:40px"><b class="garismerah">kamu itu sangat istimewa,</b></span><br>aku bahkan tidak bisa menjelaskan<br>betapa hebatnya kamu dalam hidup,<br>kamu benar-benar luar biasa<br>karena gada yang bisa sekuat<br>dan sehebat kamu, diluar sana<br>aku yakin ga semua orang bisa jadi kamu,<br>sehat-sehat trus orang hebat💪🌹❤️🔥✨🤍<br><br><b class="putih merah">Wish you all the best 🌹🔥✨>></b><br><br><br>Edited by me, ig: @qihf4😝</b></p>
         </div>
       </div>
 
